# src/car/car.model.ts
@@ -3,7 +3,7 @@ import * as mongoose from "mongoose";
 export interface Car extends mongoose.Document {
   matriculation: string;
   brand: string;
-  commentModel: string;
+  carModel: string;
   color: string;
   fuel: string;
   seats: number;
